--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -49,6 +49,10 @@
             <label for="exampleFormControlTextarea1" class="form-label"> Comentanos que deseas :) </label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
+          <button type="button" class="btn btn-primary"
+            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+          Enviar
+          </button>
     </section>
 
     <h4 class="h4Contactanos"> Tambien puedes contactarnos a traves de nuestras redes sociales! </h4>
