se modifica h5 en el footer para mantener un codigo prolijo y respetar la regla basica de no tener un h2-h3-h4 en el mismo.

--- a/pages/algunos-clientes.html
+++ b/pages/algunos-clientes.html
@@ -49,7 +49,7 @@
     </main>
     <footer>
         <div class="copyright">
-            <h5> 2022 DESIGNL TODOS LOS DERECHOS RESERVADOS </h5>
+          <p> 2022 DESIGNL TODOS LOS DERECHOS RESERVADOS </p>
             <img src="../img/DDA.png" alt=" Derechos reservados " class="imgDDA">
         </div>
     </footer>
