--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -14,7 +14,7 @@
     <header class="headerInicio">
         <a href="../index.html"><h1> designL </h1> </a>
 
-        <nav class="navbar navbar-expand-lg font-weight-normal>
+        <nav class="navbar navbar-expand-lg font-weight-normal">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -75,7 +75,7 @@
 
     <footer>
         <div class="copyright">
-            <h5> 2022 DESIGNL TODOS LOS DERECHOS RESERVADOS </h5>
+          <p> 2022 DESIGNL TODOS LOS DERECHOS RESERVADOS </p>
             <img src="../img/DDA.png" alt=" Derechos reservados " class="imgDDA">
         </div>
     </footer>
