--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </main>
     <footer class="footerNosotros">
         <div class="copyright">
-            <h5> 2022 DESIGNL TODOS LOS DERECHOS RESERVADOS </h5>
+            <p> 2022 DESIGNL TODOS LOS DERECHOS RESERVADOS </p>
             <img src="img/DDA.png" alt=" Derechos reservados " class="imgDDA">
         </div>
     </footer>
