--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -66,7 +66,7 @@
 
     <footer>
         <div class="copyright">
-            <h5> 2022 DESIGNL TODOS LOS DERECHOS RESERVADOS </h5>
+          <p> 2022 DESIGNL TODOS LOS DERECHOS RESERVADOS </p>
             <img src="../img/DDA.png" alt=" Derechos reservados " class="imgDDA">
          </div>
     </footer>
