--- a/pages/algunos-clientes.html
+++ b/pages/algunos-clientes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Proyectos">
+    <meta name="description" content="Qué trabajos hemos realizado? Ven a conocer algunos clientes con quienes hemos trabajado">
     <meta name="keywords" content="Que hemos hecho, clientes, satisfaccion, instalaciones realizadas">
     <!-- CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
