--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contactanos">
+    <meta name="description" content="Contactanos ahora, llena solo algunos datos y nos pondremos en contacto contigo lo antes posible">
     <meta name="keywords" content="email, telefono de contacto, preguntanos lo que sea, contratanos, aclaremos dudas">
     <!-- CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
