se modifica logo, se agregan links a fb, twt, yt, ds

--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -52,18 +52,17 @@
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
           <button type="button" class="btn btn-primary"
-            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 1.2rem;">
           Enviar
           </button>
     </section>
 
     <h4 class="h4Contactanos"> Tambien puedes contactarnos a traves de nuestras redes sociales! </h4>
     <main class="redess">
-        <img src="../img/fbnegro.png" alt=" facebook ">
-        <img src="../img/ignegro.png" alt=" instagram ">
-        <img src="../img/twitternegro.png" alt=" twitter ">
-        <img src="../img/dsnegro.png" alt=" discord ">
-        <img src="../img/ytnegro.png" alt=" youtube ">
+      <a title=" Facebook " href="https://www.facebook.com/profile.php?id=100086971525399" target="_blank"> <img src="../img/fbnegro.png" alt=" facebook "> </a> 
+      <a title=" Facebook " href="https://twitter.com/DesignLeds" target="_blank"> <img src="../img/twitternegro.png" alt=" twitter "> </a>
+      <a title=" Facebook " href="https://discord.gg/TmxCP7ZW" target="_blank"> <img src="../img/dsnegro.png" alt=" discord "> </a>
+      <a title=" Facebook " href="https://www.youtube.com/channel/UCAe43xJgw84qe3FSbADZ_4g/videos" target="_blank"> <img src="../img/ytnegro.png" alt=" youtube "> </a>
     </main>
 
     <footer>
