--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
     <header class="headerInicio">
       <a href="./index.html"> 
-        <h1 class="animate__animated animate__fadeInDown"> designL </h1> 
+        <img src="/img/logo.png" alt=" Logo Design Leds negro y celeste" class="animate__animated animate__fadeInDown">
+        <h1> designL </h1> 
       </a>    
         <nav class="navbar navbar-expand-lg headerInicio">
             <div class="container-fluid">
