se modifica los servicios, h1, h2 y se agrega el logo a todos los html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <body>
     <header class="headerInicio">
       <a href="./index.html"> 
-        <img src="/img/logo.png" alt=" Logo Design Leds negro y celeste" class="animate__animated animate__fadeInDown">
-        <h1> designL </h1> 
+        <img class="logoInicio animate__animated animate__fadeInDown" src="/img/logo.png" alt=" Logo Design Leds negro y celeste" >
       </a>    
         <nav class="navbar navbar-expand-lg headerInicio">
             <div class="container-fluid">
