--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -14,8 +14,9 @@
 </head>
 <body>
     <header class="headerInicio">
-        <a href="../index.html"><h1> designL </h1> </a>
-
+        <a href="../index.html"> 
+          <img class="logoInicio" src="/img/logo.png" alt=" Logo Design Leds negro y celeste" >
+        </a>
         <nav class="navbar navbar-expand-lg font-weight-normal">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +38,7 @@
 
     <main class="mainNosotros">
 
-        <h2> ¿Que puedes esperar de designL?</h2>
+        <h1> ¿Que puedes esperar de designL?</h1>
 
         <section class="sectionNosotros">
 
@@ -45,17 +46,17 @@
             <div class="row">
               <div class="col">
                 <img src="../img/mensaje.png" alt="" class="animate__animated animate__flip">
-                <h3> Puedes escribirnos con tus dudas </h3>
+                <h2> Puedes escribirnos con tus dudas </h2>
                 <p> Estamos al tanto que escoger puede ser complicado por la amplia selección, por lo que podemos ayudarte para que puedas escoger un color de tu agrado </p>
               </div>
               <div class="col">
                 <img src="../img/trabajo-en-equipo.png" alt="" class="animate__animated animate__flip">
-                <h3> Trabajamos en equipo </h3>
+                <h2> Trabajamos en equipo </h2>
                 <p> Tenemos un amplio equipo de diseñadores y especialistas que van a ayudarte para poder escoger el estilo que más te agrade </p>
               </div>
               <div class="col">
                 <img src="../img/inteligencia-artificial.png" alt="" class="animate__animated animate__flip">
-                <h3> Encontraremos la solución adecuada atendiendo tus necesidades </h3>
+                <h2> Encontraremos la solución adecuada atendiendo tus necesidades </h2>
                 <p> Te enseñaremos a controlar el RGB de tus luces, de esta forma podrás cambiar los colores y probar distintos diseños cuando gustes </p>
               </div>
               <div class="col">
