--- a/pages/algunos-clientes.html
+++ b/pages/algunos-clientes.html
@@ -13,8 +13,9 @@
 </head>
 <body>
     <header class="headerInicio">
-        <a href="../index.html"><h1> designL </h1> </a>
-
+      <a href="../index.html"> 
+        <img class="logoInicio" src="/img/logo.png" alt=" Logo Design Leds negro y celeste" >
+      </a>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
