--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -13,8 +13,9 @@
 </head>
 <body>
     <header class="headerInicio">
-        <a href="../index.html"><h1> designL </h1> </a>
-
+      <a href="../index.html"> 
+        <img class="logoInicio" src="/img/logo.png" alt=" Logo Design Leds negro y celeste" >
+      </a>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +36,8 @@
     </header>
 
     <section class="sectionContacto">
-        <div class="mb-3">
+        <form action="">
+          <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label"> Nombre </label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Vicente Pérez">
           </div>
@@ -51,10 +53,10 @@
             <label for="exampleFormControlTextarea1" class="form-label"> Comentanos que deseas :) </label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
-          <button type="button" class="btn btn-primary"
-            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 1.2rem;">
+          <button type="submit" class="btn btn-primary" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 1.2rem;">
           Enviar
           </button>
+        </form>
     </section>
 
     <h4 class="h4Contactanos"> Tambien puedes contactarnos a traves de nuestras redes sociales! </h4>
