se modifica index quitando los lorem y agregando texto real

--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
           </div>
           <div class="col-md-7">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ratione eos animi unde magni similique suscipit laudantium libero, nesciunt, voluptatum dolorem, asperiores nemo tempora rerum dolores numquam excepturi? Eligendi, qui!
+              Bienvenidos a DesignLeds. Nosotros nos encargamos de las optimizaciones a tus espacios instalando luces leds  de calidad para mejorar tu estadia en tu espacio favorito.
             </p>
           
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis perspiciatis exercitationem itaque excepturi, iure eligendi nulla quis nihil corporis, doloribus aperiam maiores! Odit, pariatur excepturi. Debitis veniam maxime enim. Ratione.
+              De principio a fin te iremos guiando y ayudando con todas tus dudas para que puedas tener un espacio de ensueño y de esa forma puedas disfrutar más estando en tu sitio de trabajo/entretención.
             </p>
           
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis deserunt mollitia optio iste ipsum dolore tempore nihil, amet aperiam nostrum porro rerum accusamus ut sapiente maxime! Architecto ratione unde reiciendis!
+              Puedes confiar en nuestro equipo de trabajo quien hará un trabajo 100% de calidad y óptimo, de lo contrario, si no estas satisfecho con el trabajo final modificamos según tus indicaciones lo que haga falta hasta que te sientas feliz con el trabajo final.
             </p>
           </div>
           </div>
