se agregan tildes y se modifica una palabra en el footer sobre los derechos reservados

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </main>
     <footer class="footerNosotros">
         <div class="copyright">
-            <p> 2022 DESIGNL TODOS LOS DERECHOS RESERVADOS </p>
+            <p> 2022 DESIGNLEDS TODOS LOS DERECHOS RESERVADOS </p>
             <img src="img/DDA.png" alt=" Derechos reservados " class="imgDDA">
         </div>
     </footer>
