--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -38,7 +38,7 @@
 
     <main class="mainNosotros">
 
-        <h1> ¿Que puedes esperar de designL?</h1>
+        <h1> ¿Qué puedes esperar de designLeds?</h1>
 
         <section class="sectionNosotros">
 
@@ -61,7 +61,7 @@
               </div>
               <div class="col">
                 <img src="../img/juego-de-azar.png" alt="" class="animate__animated animate__flip">
-                <h3> Sácale el maximo de provecho a tu espacio </h3>
+                <h2> Sácale el maximo de provecho a tu espacio </h2>
                 <p> Combina, cambia y transforma tu ambiente con los colores que más te agraden </p>
               </div>
             </div>
@@ -71,14 +71,14 @@
     
 
         <div>
-        <h5> designL fue creado en 2022 en vista del boom actual donde cada vez más personas quieren decorar los espacios donde mantienen sus computadores y laptops en donde trabajan, juegan o simplemente disfrutan de su tiempo libre. </h5>
+        <h3> designL fue creado en 2022 en vista del boom actual donde cada vez más personas quieren decorar los espacios donde mantienen sus computadores y laptops en donde trabajan, juegan o simplemente disfrutan de su tiempo libre. </h3>
         </div>
 
     </main>
 
     <footer>
         <div class="copyright">
-          <p> 2022 DESIGNL TODOS LOS DERECHOS RESERVADOS </p>
+          <p> 2022 DESIGNLEDS TODOS LOS DERECHOS RESERVADOS </p>
             <img src="../img/DDA.png" alt=" Derechos reservados " class="imgDDA">
         </div>
     </footer>
