--- a/pages/algunos-clientes.html
+++ b/pages/algunos-clientes.html
@@ -52,7 +52,7 @@
     </main>
     <footer>
         <div class="copyright">
-          <p> 2022 DESIGNL TODOS LOS DERECHOS RESERVADOS </p>
+          <p> 2022 DESIGNLEDS TODOS LOS DERECHOS RESERVADOS </p>
             <img src="../img/DDA.png" alt=" Derechos reservados " class="imgDDA">
         </div>
     </footer>
