--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -39,11 +39,11 @@
         <form action="">
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label"> Nombre </label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Vicente Pérez">
+            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Vicente Pérez">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Número de Contacto </label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="+5691234567">
+            <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="+5691234567">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label"> Correo Electronico </label>
@@ -69,7 +69,7 @@
 
     <footer>
         <div class="copyright">
-          <p> 2022 DESIGNL TODOS LOS DERECHOS RESERVADOS </p>
+          <p> 2022 DESIGNLEDS TODOS LOS DERECHOS RESERVADOS </p>
             <img src="../img/DDA.png" alt=" Derechos reservados " class="imgDDA">
          </div>
     </footer>
