--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -38,7 +38,7 @@
 
     <main class="mainNosotros">
 
-        <h1> ¿Qué puedes esperar de designLeds?</h1>
+        <h1> ¿Qué puedes esperar de DesignLeds?</h1>
 
         <section class="sectionNosotros">
 
