ultimo commit agregando descripción a las imagenes. Commit final

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -39,12 +39,12 @@
         <h2> Ofrecemos una amplia variedad de productos, desde las luces recomendadas, colores y nos quedamos contigo hasta finalizar el proyecto que tanto has deseado </h2>
         <section class="sectionServicios">
             <div class="itemSectionContent">
-                <img src="../img/luces-de-navidad.png" alt="">
+                <img src="../img/luces-de-navidad.png" alt=" Imagen 1 luces ejemplos">
                 <p>Luces de todo tipo. Escoge la que más te agrade y nosotros haremos el diseño por ti. </p>
             </div>
             
             <div class="itemSectionContent">
-                <img src="../img/linterna.png" alt="">
+                <img src="../img/linterna.png" alt=" Imagen 2 linterna ejemplo">
                 <p>Ofrecemos un servicio de instalación rápida, por lo que no tienes que preocuparte por la demora. Nuestro servicio toma aproximadamente 45 minutos en estar completado y 100% funcional.</p>
             </div>
         </section>
