--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -62,9 +62,9 @@
     <h4 class="h4Contactanos"> Tambien puedes contactarnos a traves de nuestras redes sociales! </h4>
     <main class="redess">
       <a title=" Facebook " href="https://www.facebook.com/profile.php?id=100086971525399" target="_blank"> <img src="../img/fbnegro.png" alt=" facebook "> </a> 
-      <a title=" Facebook " href="https://twitter.com/DesignLeds" target="_blank"> <img src="../img/twitternegro.png" alt=" twitter "> </a>
-      <a title=" Facebook " href="https://discord.gg/TmxCP7ZW" target="_blank"> <img src="../img/dsnegro.png" alt=" discord "> </a>
-      <a title=" Facebook " href="https://www.youtube.com/channel/UCAe43xJgw84qe3FSbADZ_4g/videos" target="_blank"> <img src="../img/ytnegro.png" alt=" youtube "> </a>
+      <a title=" Twitter " href="https://twitter.com/DesignLeds" target="_blank"> <img src="../img/twitternegro.png" alt=" twitter "> </a>
+      <a title=" discord " href="https://discord.gg/TmxCP7ZW" target="_blank"> <img src="../img/dsnegro.png" alt=" discord "> </a>
+      <a title=" youtube " href="https://www.youtube.com/channel/UCAe43xJgw84qe3FSbADZ_4g/videos" target="_blank"> <img src="../img/ytnegro.png" alt=" youtube "> </a>
     </main>
 
     <footer>
