--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -45,22 +45,22 @@
         <div class="container text-center">
             <div class="row">
               <div class="col">
-                <img src="../img/mensaje.png" alt="" class="animate__animated animate__flip">
+                <img src="../img/mensaje.png" alt=" Mensaje texto // comunicate con nosotros" class="animate__animated animate__flip">
                 <h2> Puedes escribirnos con tus dudas </h2>
                 <p> Estamos al tanto que escoger puede ser complicado por la amplia selección, por lo que podemos ayudarte para que puedas escoger un color de tu agrado </p>
               </div>
               <div class="col">
-                <img src="../img/trabajo-en-equipo.png" alt="" class="animate__animated animate__flip">
+                <img src="../img/trabajo-en-equipo.png" alt=" Trabajo en equipo" class="animate__animated animate__flip">
                 <h2> Trabajamos en equipo </h2>
                 <p> Tenemos un amplio equipo de diseñadores y especialistas que van a ayudarte para poder escoger el estilo que más te agrade </p>
               </div>
               <div class="col">
-                <img src="../img/inteligencia-artificial.png" alt="" class="animate__animated animate__flip">
+                <img src="../img/inteligencia-artificial.png" alt=" Soluciones inteligentes " class="animate__animated animate__flip">
                 <h2> Encontraremos la solución adecuada atendiendo tus necesidades </h2>
                 <p> Te enseñaremos a controlar el RGB de tus luces, de esta forma podrás cambiar los colores y probar distintos diseños cuando gustes </p>
               </div>
               <div class="col">
-                <img src="../img/juego-de-azar.png" alt="" class="animate__animated animate__flip">
+                <img src="../img/juego-de-azar.png" alt=" Mando consola " class="animate__animated animate__flip">
                 <h2> Sácale el maximo de provecho a tu espacio </h2>
                 <p> Combina, cambia y transforma tu ambiente con los colores que más te agraden </p>
               </div>
