--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="headerInicio">
       <a href="./index.html"> 
-        <img class="logoInicio animate__animated animate__fadeInDown" src="/img/logo.png" alt=" Logo Design Leds negro y celeste" >
+        <img class="logoInicio animate__animated animate__fadeInDown" src="/img/logo.png" alt=" Logo Design Leds negro y celeste">
       </a>    
         <nav class="navbar navbar-expand-lg headerInicio">
             <div class="container-fluid">
@@ -40,7 +40,7 @@
     <main>
 
         <section>
-        <div class="clearfix row textoCentral">
+        <div class="clearfix textoCentral">
           <div class="col-md-5">
             <img src="img/imagen index.jpeg" class="imagenPrincipal" alt="Imagen principal de la página, azulado">
           </div>
