--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
 
         <section>
-        <div class="clearfix textoCentral">
+        <div class="clearfix row-fix textoCentral">
           <div class="col-md-5">
             <img src="img/imagen index.jpeg" class="imagenPrincipal" alt="Imagen principal de la página, azulado">
           </div>
